fixed overflow problem

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -100,6 +100,7 @@ main{
 
 #app {
   width: 100vw;
+  overflow: hidden;
 }
 
 ::selection{
